# spark-nlp-failure

./: .gitignore  BUILD.bazel  WORKSPACE
src/main/scala/com/github/nickersoft/: BUILD.bazel  Main.scala
