load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary")

scala_binary(
    name = "app",
    srcs = ["Main.scala"],
    main_class = "com.github.nickersoft.Main",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_johnsnowlabs_nlp_spark_nlp_2_12",
        "@maven//:org_apache_spark_spark_catalyst_2_12",
        "@maven//:org_apache_spark_spark_core_2_12",
        "@maven//:org_apache_spark_spark_mllib_2_12",
        "@maven//:org_apache_spark_spark_mllib_local_2_12",
        "@maven//:org_apache_spark_spark_sql_2_12",
        "@maven//:org_apache_spark_spark_tags_2_12",
    ],
)
